# rtw-optimizer

./: .gitignore  01-fare-rules.md  02-optimization-guide.md  10-ba-ntp-optimization-guide.md  12-rtw-optimization-guide.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: rtw-analyze.md  rtw-booking.md  rtw-compare.md  rtw-help.md  rtw-init.md  rtw-lookup.md  rtw-plan.md  rtw-search.md  rtw-setup.md  rtw-status.md  rtw-verify.md
.claude/rules/: rules-engine.md  testing.md
.github/workflows/: ci.yml
rtw/: __main__.py  booking.py  carriers.py  cli.py  continents.py  cost.py  distance.py  models.py  ntp.py  validator.py  value.py
rtw/data/: carriers.yaml  continents.yaml  fares.yaml  hubs.yaml  ntp_rates.yaml  same_cities.yaml  surcharges.yaml
rtw/output/: __init__.py  json_formatter.py  plain_formatter.py  rich_formatter.py  search_formatter.py
rtw/rules/: __init__.py  base.py  carriers.py  direction.py  geography.py  hemisphere.py  intercontinental.py  segments.py  stopovers.py  surface.py  validity.py
rtw/scraper/: __init__.py  batch.py  cache.py  expertflyer.py  expertflyer_fares.py  google_flights.py  serpapi_flights.py
rtw/search/: __init__.py  availability.py  exporter.py  fare_comparison.py  (+5 more)
scripts/: validate_harness.py
tests/: conftest.py  test_booking.py  test_carriers.py  test_cli_e2e.py  test_cli_verify.py  test_cost.py  test_distance.py  test_fare_comparison.py  test_fuzz.py  test_integration.py  test_models.py  test_new_fixtures.py  test_ntp.py  test_output.py  test_smoke.py  test_validator.py  test_value.py
(+58 files in other folders)
